--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,5 +1,11 @@
 name: "default"
 
+on:
+  push:
+    branches:
+      - main
+      - dev
+
 env:
   # Container Registry
   CONTAINER_REGISTRY_HOSTNAME: ghcr.io
